--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "mast",
-  "version": "0.0.0",
-  "description": "The productivity-enhancing front-end library for Sails. Mast was built from the ground up for creating realtime web applications that work with handsets, tablets, and PC browers. Like Sails, Mast is a collection of the latest stable versions of really great libraries, in this case Backbone.js, jQuery, and Socket.io.",
+  "author": "Mike McNeil <mike@balderdash.co>",
+  "contributors": [ 
+    { "name": "Balderdash Design Co.", "email": "dev@balderdash.co" }, 
+    { "name": "Mike McNeil", "email": "mike@balderdash.co" },
+    { "name": "Gabe Hernandez", "email": "gabe@balderdash.co" }
+  ],
+  "version": "12.09.25",
+  "description": "Convention-over-coniguration framework for Backbone.js",
+  "homepage": "http://sailsjs.com",
+  "keywords": ["Mast", "Sails", "MVC", "Rails", "ORM", "Grails"],
   "main": "lib/export",
   "directories": {
+    "lib": "lib",
     "example": "example"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "dependencies": { },
   "repository": {
     "type": "git",
     "url": "git://github.com/balderdashy/mast.git"
   },
-  "keywords": [
-    "Sails",
-    "Backbone",
-    "Spine"
-  ],
-  "author": "Mike McNeil",
-  "license": "MIT"
+  "licenses": [{
+    "type": "MIT",
+    "url": "http://mast.mit-license.org/"
+  }],
+  "bugs" : {
+    "url" : "http://github.com/balderdashy/mast/issues"
+  },
+  "engines": {
+    "node": ">= 0.6.4"
+  }
 }
