Updated update script and added rigging dependency for compilation.

--- a/package.json.template
+++ b/package.json.template
@@ -15,7 +15,9 @@
     "lib": "lib",
     "example": "example"
   },
-  "dependencies": { },
+  "dependencies": { 
+    "rigging": "12.11.1400"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/balderdashy/mast.git"
