Build script work.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ public/js/_*.js
 # Ignore production minified/compiled assets
 public/_target/*.js
 public/_target/*.css
+
+# Ignore cmd line build output
+.rigging_out/*
+.rigging_out
