--- a/package.json
+++ b/package.json
@@ -1,33 +1,51 @@
 {
   "name": "mast",
   "author": "Mike McNeil <mike@balderdash.co>",
-  "contributors": [ 
-    { "name": "Balderdash Design Co.", "email": "dev@balderdash.co" }, 
-    { "name": "Mike McNeil", "email": "mike@balderdash.co" },
-    { "name": "Gabe Hernandez", "email": "gabe@balderdash.co" }
+  "contributors": [
+    {
+      "name": "Balderdash Design Co.",
+      "email": "dev@balderdash.co"
+    },
+    {
+      "name": "Mike McNeil",
+      "email": "mike@balderdash.co"
+    },
+    {
+      "name": "Gabe Hernandez",
+      "email": "gabe@balderdash.co"
+    }
   ],
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "Convention-over-configuration framework for Backbone.js",
   "homepage": "http://sailsjs.com",
-  "keywords": ["Mast", "Sails", "MVC", "Rails", "ORM", "Grails"],
+  "keywords": [
+    "Mast",
+    "Sails",
+    "MVC",
+    "Rails",
+    "ORM",
+    "Grails"
+  ],
   "main": "lib/export",
   "directories": {
     "lib": "lib",
     "example": "example"
   },
-  "dependencies": { 
+  "dependencies": {
     "rigging": "12.11.1414"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/balderdashy/mast.git"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "http://mast.mit-license.org/"
-  }],
-  "bugs" : {
-    "url" : "http://github.com/balderdashy/mast/issues"
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://mast.mit-license.org/"
+    }
+  ],
+  "bugs": {
+    "url": "http://github.com/balderdashy/mast/issues"
   },
   "engines": {
     "node": ">= 0.6.4"
