--- a/package.json
+++ b/package.json
@@ -15,16 +15,14 @@
       "email": "gabe@balderdash.co"
     }
   ],
-  "version": "0.0.26",
+  "version": "0.0.0",
   "description": "Convention-over-configuration framework for Backbone.js",
   "homepage": "http://sailsjs.com",
   "keywords": [
     "Mast",
-    "Sails",
-    "MVC",
-    "Rails",
-    "ORM",
-    "Grails"
+    "Backbone",
+    "Realtime",
+    "Socket.io"
   ],
   "main": "lib/export",
   "directories": {
@@ -46,8 +44,5 @@
   ],
   "bugs": {
     "url": "http://github.com/balderdashy/mast/issues"
-  },
-  "engines": {
-    "node": ">= 0.6.4"
   }
 }
