--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "email": "gabe@balderdash.co"
     }
   ],
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Convention-over-configuration framework for Backbone.js",
   "homepage": "http://sailsjs.com",
   "keywords": [
@@ -44,5 +44,8 @@
   ],
   "bugs": {
     "url": "http://github.com/balderdashy/mast/issues"
+  },
+  "devDependencies": {
+    "mocha": "~1.10.0"
   }
 }
