--- a/package.json
+++ b/package.json
@@ -29,9 +29,6 @@
     "lib": "lib",
     "example": "example"
   },
-  "dependencies": {
-    "rigging": "12.11.1414"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/balderdashy/mast.git"
@@ -46,6 +43,9 @@
     "url": "http://github.com/balderdashy/mast/issues"
   },
   "devDependencies": {
-    "mocha": "~1.10.0"
+    "mocha": "~1.10.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt": "~0.4.1"
   }
 }
