--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "mocha": "~1.10.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "grunt": "~0.4.1"
+    "grunt": "~0.4.1",
+    "grunt-watchify": "~0.1.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
