--- a/.gitignore
+++ b/.gitignore
@@ -5,16 +5,5 @@ ssl
 *~
 .idea
 
-# Ignore config file w/ sensitive information
-config/db.js
-
-# Ignore dev minified/compiled assets
-public/stylesheets/_*.css
-public/js/_*.js
-
-# Ignore production minified/compiled assets
-public/_target/*.js
-public/_target/*.css
-
-# Ignore cmd line build output
-example/public/mast.dev.js
+# Ignore devEnv stuff:
+.tmp.mast.build.js
