--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "mast",
-  "version": "1.0.0",
-  "homepage": "https://github.com/balderdashy/mast@rewrite",
+  "version": "1.1.0",
+  "homepage": "https://github.com/balderdashy/mast",
   "authors": [
     "Mike McNeil <mike@balderdash.co>", "Gabe Hernandez <gabe@balderdash.co>"
   ],
